--- a/scraping e-commerce sites/readme
+++ b/scraping e-commerce sites/readme
@@ -1,1 +1,66 @@
-to be continued
+E-shopping-scraper
+Python attacking E-commerce sites :)
+execute the crawler only in this way:
+scrapy crawl flip_spider
+Description:
+This is a simple python based project which is used to scrape the online shopping sites search results page. It chooses the first product to appear on the search result of the product user inputs from 5 different websites and exports it to the csv file  .This project has been implemented with mighty technologies like python, scrapy  Once you started gathering the data, you could do run many analysis like price range variation, offers, stock status, Link for the product, Ratings…
+in screenshots directory we have uploaded our first version screenshots. you can take a look and give us the feedback.
+Tools:
+•	python
+•	xpath.
+•	scrapy
+How to execute this project?
+STEP-1
+
+Please install scrapy using the below commands
+
+pip install scrapy
+
+if you are using anaconda use the below
+
+conda install -c conda-forge scrapy
+
+
+STEP-2	
+
+Navigate cmd to your desired folder run commands
+
+scrapy startproject flip
+
+scrapy genspider flip_spider
+
+STEP-3
+
+paste all the files in the github folder to the above created project location and run
+
+STEP-4 
+
+navigate to the settings.py file and specify the path where your csv file has to be saved (please don’t replace the ‘r’)
+
+ 
+
+That’s it you are ready !!!!!
+
+LAST STEP(don’t get tired)
+
+To start crawling run
+
+scrapy crawl flip_spider
+
+you will be prompted to enter the desired product name 
+
+ 
+
+SMASH that ENTER key!!!!!!!!!!. 
+Results will be exported to csv file in the desired location you provided
+Features:
+•	Crawling all the sites in a single spider
+•	Case-insensitive search
+•	Stock status 
+•	No worries for No results.
+we have been working for further releases for the extensive use of customers.
+Screenshots:
+###Demo:
+ 
+Thanks for your time.
+Please take a look at the demo video too.
